// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`newTotal should create total with alias 1`] = `
Object {
  "alias": "My Total",
  "attributeIdentifier": "a_label.account.id",
  "measureIdentifier": "m_afSEwRwdbMeQ",
  "type": "sum",
}
`;

exports[`newTotal should create total with measure and attr ids 1`] = `
Object {
  "attributeIdentifier": "attrLocalId",
  "measureIdentifier": "measureLocalId",
  "type": "sum",
}
`;

exports[`newTotal should create total with measure and attr objects 1`] = `
Object {
  "attributeIdentifier": "a_label.account.id",
  "measureIdentifier": "m_afSEwRwdbMeQ",
  "type": "sum",
}
`;

exports[`newTotal should create total with mix of object and ids 1`] = `
Object {
  "attributeIdentifier": "attrLocalId",
  "measureIdentifier": "m_afSEwRwdbMeQ",
  "type": "sum",
}
`;
